methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:2: error: Boolean(false) does not take parameters
  var biscuit:Boolean=false()
                           ^